--- a/index.html
+++ b/index.html
@@ -4,47 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guess My Number</title>
     <link rel="stylesheet" href="styles.css" />
+    <title>Modal Window</title>
   </head>
   <body>
-    <div class="head-part">
-      <div class="head-part-sub">
-        <button class="again-button btn-proj">Again!</button>
-        <div class="number-range-para">
-          <p class="number-range">(Between 1 and 20)</p>
-        </div>
-      </div>
-
-      <div class="head-first">
-        <h1 class="first-head">Guess My Number!</h1>
-      </div>
-      <div class="number-out"><span class="out-value">?</span></div>
+    <div class="container">
+      <button class="child">Show modal 1</button>
+      <button class="child">Show modal 2</button>
+      <button class="child">Show modal 3</button>
     </div>
 
-    <div class="second-part">
-      <div class="grid-part1">
-        <input type="number" class="input-number" />
-        <button class="check-button btn-proj">Check!</button>
-      </div>
-
-      <div class="grid-part2">
-        <div class="start-check">
-          <p class="start-check-para">Start guessing...</p>
-        </div>
-        <div class="score">
-          <p class="score-line">
-            💯 Score:
-            <span class="score-num inline-span">0</span>
-          </p>
-        </div>
-        <div class="high-score">
-          <p class="high-score-line">
-            🥇 Highscore: <span class="high-score-num inline-span">0</span>
-          </p>
-        </div>
-      </div>
+    <div class="modal hidden">
+      <button class="close-modal">&times;</button>
+      <h1>I'm a modal window 😍</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+        velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+        occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+        mollit anim id est laborum.
+      </p>
     </div>
+    <div class="overlay hidden"></div>
+
     <script src="script.js"></script>
   </body>
 </html>
